--- a/libro-parent/libro-rest-service/pom.xml
+++ b/libro-parent/libro-rest-service/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>libro-parent</artifactId>
     <groupId>es.ejemplos.jpexposito</groupId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>libro-rest-service</artifactId>
